@@ -193,6 +193,8 @@ getOption(x, default = NULL)
       (which are sometimes used prior to printing.)
 
       Only single-byte characters were supported prior to \R 3.2.0.
+      In \R 3.2.1 and earlier, multi- (or zero-) character \code{OutDec}
+      were accepted, but always worked only partially.
     }
 
     \item{\code{pager}:}{the command used for displaying text files by
